--- a/monCV.html
+++ b/monCV.html
@@ -9,7 +9,9 @@
     <body>
         <header>
             <nav>
-                <a href="agenda.html"> Mon agenda </a> |
+              <ul>
+                <li> <a href="agenda.html"> Mon agenda </a> </li>
+              </ul>                
             </nav>
 
             <h1> Site personnel de Maxime CHAILLET </h1>
@@ -28,13 +30,26 @@
         </section>
         
         <section id="civil">
+            <table>
+            <tr>
+            <td> <img src="maPhoto.png"> </td>
+            <td>  
+			
             <h2> Etat civil </h2>
-            <img src="maPhoto.png">
             <p> CHAILLET </p>
             <p> Maxime </p>
             <p> Né le 23/05/1982 </p>
             <p> 10 impasse du Dauphiné, 38600 Fontaine  </p>
+            </td></tr></table>
         </section>
+
+		<section id="arbre">
+
+		<img src="fleche.png">
+		<div>			
+		<span class="fond_scolarite" >1982<a href="#civil"> Etat civil </a> </span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>83</span><span>2016</span>
+		</div>
+		</section>
 
         <section id="diplome">
             <h2> Diplômes </h2>
