--- a/agenda.html
+++ b/agenda.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html><head>
+<html>
+  <head>
   <title> Mon agenda </title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <link href="style_1.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
 
 <header>
 <nav>
-<a href="file:///home/T/TMP-cci-01/ApplicationWeb/TP_CV/monCV.html"> Mon CV </a> | 
+  <ul> 
+    <li> <a href="monCV.html"> Mon CV </a>
+    </li>
+  </ul>
 </nav>
 
 <h1> Site personnel de Maxime CHAILLET </h1>
