--- a/agenda.html
+++ b/agenda.html
@@ -3,7 +3,7 @@
   <head>
   <title> Mon agenda </title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <link href="style_1.css" rel="stylesheet" type="text/css"/>
+  <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
