--- a/agenda.html
+++ b/agenda.html
@@ -1,85 +1,118 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  <title> Mon agenda </title>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <link href="style.css" rel="stylesheet" type="text/css"/>
-  <link href="agenda.css" rel="stylesheet" type="text/css"/>
-  
-</head>
-
-<body>
-
-<header>
-<nav>
-					<h1> Mon site personnel</h1>
-
-  <ul> 
-    <li> <a href="accueil.html"> Accueil </a>
-    <li> <a href="monCV.html"> Mon CV </a>
-                        <li> <a href="agenda.html"> Mon agenda </a> </li>
-
-    
-    </li>
-  </ul>
-</nav>
-</header>
-
-<section>
-<table border="1">
-<tbody>
-	<tr>
-  <th> Horaire </th>
-  <th> Lundi </th>
-  <th> Mardi </th>
-  <th> Mercredi </th>
-  <th> Jeudi </th>
-  <th> Vendredi </th>
-
-</tr><tr>
-  <td> 8h - 10h </td>
-  <td class="anglais" > Anglais </td>
-  <td> </td>
-  <td class="bd"> <a  href="https://im2ag-moodle.e.ujf-grenoble.fr/course/view.php?id=91" target="_blank"> Bases de données  </a> </td>
-  <td rowspan="2" class="musique"> Musique </td>
-  <td rowspan="2" class="prog" > Programmation </td>
-</tr>
-
-<tr>
-  <td> 10h - 12h </td> 
-  <td class="reseau"> Reseaux </td>
-  <td class="algo"> Algorithme </td>
-  <td class="gl" > Génie logiciel </td>
-</tr>
-
-<tr> </tr>
-
-<tr>
-  <td> 13h - 15h </td>
-  <td rowspan="2" class="bd" > Base de donnéees </td>
-  <td rowspan="2" class="prog" > Programmation </td>
-  <td class="system"> Systèmes </td>
-  <td rowspan="2" class="sport"> Sport </td>
-  <td class="algo"> Algo </td>
-</tr>
-
-<tr>
-  <td> 15h - 17h </td>
-  <td> </td>
-  <td> Beer session </td>
-</tr>  
-
-</tbody></table>
-
-
-</section>
-
-
-
-
-
-
-
-
-
-</body></html>
+    <head>
+        <title>
+            Mon agenda
+        </title>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8">
+        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="agenda.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <header>
+            <nav>
+                <h1>
+                    Mon site personnel
+                </h1>
+                <ul>
+                    <li>
+                        <a href="index.html">Accueil</a>
+                    </li>
+                    <li>
+                        <a href="monCV.html">Mon CV</a>
+                    </li>
+                    <li>
+                        <a href="agenda.html">Mon agenda</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section>
+            <table border="1">
+                <tbody>
+                    <tr>
+                        <th>
+                            Horaire
+                        </th>
+                        <th>
+                            Lundi
+                        </th>
+                        <th>
+                            Mardi
+                        </th>
+                        <th>
+                            Mercredi
+                        </th>
+                        <th>
+                            Jeudi
+                        </th>
+                        <th>
+                            Vendredi
+                        </th>
+                    </tr>
+                    <tr>
+                        <td>
+                            8h - 10h
+                        </td>
+                        <td class="anglais">
+                            Anglais
+                        </td>
+                        <td></td>
+                        <td class="bd">
+                            <a href="https://im2ag-moodle.e.ujf-grenoble.fr/course/view.php?id=91" target="_blank">Bases de données</a>
+                        </td>
+                        <td rowspan="2" class="musique">
+                            Musique
+                        </td>
+                        <td rowspan="2" class="prog">
+                            Programmation
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            10h - 12h
+                        </td>
+                        <td class="reseau">
+                            Reseaux
+                        </td>
+                        <td class="algo">
+                            Algorithme
+                        </td>
+                        <td class="gl">
+                            Génie logiciel
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            13h - 15h
+                        </td>
+                        <td rowspan="2" class="bd">
+                            Base de donnéees
+                        </td>
+                        <td rowspan="2" class="prog">
+                            Programmation
+                        </td>
+                        <td class="system">
+                            Systèmes
+                        </td>
+                        <td rowspan="2" class="sport">
+                            Sport
+                        </td>
+                        <td class="algo">
+                            Algo
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            15h - 17h
+                        </td>
+                        <td></td>
+                        <td>
+                            Beer session
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </body>
+</html>
